Update language resource

--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -438,7 +438,7 @@
       "Gioia_dog007": "Come on, hun, you know I do it for us. I don't want to bring here my worries and my concerns about my work or, like in this case, about my family. This is our happy place, there is no need to discuss about what can be left outside...",
       "Gioia_dog008": "It's still my birthday, I have to find the time to celebrate with my relatives.",
       "Mario_dog006": "How is it even possible that your family is a concern? You hardly ever mention them! You never introduced me to them! Do they even know I exist? Have you ever told them we have something going on here? Can't they join the celebrations here?",
-      "Gioia_dog009": "Oh, come on, don't be silly! We already discussed about this. What I do with my private life is none of their business. I want them to stay out of this. They wouldn't understand.",
+      "Gioia_dog009": "Oh, come on, don't be silly! We already discussed this. What I do with my private life is none of their business. I want them to stay out of this. They wouldn't understand.",
       "Mario_dog007": "You are ashamed of this relationship, aren't you?",
       "Gioia_dog010": "Don't. Just don't. Not again. I had enough, I have things to take care of. I'll be back later.",
       "Mario_dog008": "[i]Sh#t![/i]",
@@ -449,7 +449,7 @@
       "Mario_dog_mariohouse": "[i]I am not escaping this by getting back here! And probably someone else took this place already.[/i]",
       "Mario_dog_gioiahouse": "[i]I hope she won't decide to get back here...[/i]",
       "Mario_dog_park": "[i]Sure. Should I pick some flowers? Lame...[/i]",
-      "Mario_dog_townhall": "[i]I could hang a banner from the rooftop. \"Forgive me\". Pathetic. And then I'd get arrested. I don't have the privileges to get here.[/i]",
+      "Mario_dog_townhall": "[i]I could hang a banner from the rooftop. \"Forgive me\". Pathetic. And then I'd get into troubles. I don't have the privileges to get here.[/i]",
       "Mario_dog_restaurant": "[i]This reminds me I haven't been eating anything for lunch.[/i]",
       "Mario_dog_bar": "[i]And then what? Buy an \"all you can drink\" voucher she'd never use?[/i]",
       "Mario_dog_dogpound": "[i]I guess this is the right day. Someone is going to find a new home! Let's go.[/i]",
@@ -557,7 +557,7 @@
       "Mario_party": "[i]Oh, beh. Non sono un appassionato di balli, ma può essere una buona occasione per incontrare qualcuno. Meglio che vada a prepararmi e che mi metta qualcosa di carino.[/i]",
       "Dog_pound_sign": "[b]Canile\nVieni a conoscere il tuo nuovo migliore amico.[/b]",
       "Mario_dog": "[i]Ho sempre desiderato un cane. Ma non credo di potermi prendere una simile responsabilità da solo. Magari prima o poi potrò condividere una simile gioia con qualcuno.[/i]",
-      "Inn": "[b]AvaBar\nGrog, Nuka Cola, Birra Pißner e molto altro.\nSiamo aperti![/b]",
+      "Inn": "[b]AvaBar\nGrog, Nuka Cola, Birra Pißner e molto altro!\nSiamo aperti![/b]",
       "Mario_Inn": "[i]Sembra fico. Dovrei tornarci prima o poi. Ma al momento non ho voglia di bere da solo.[/i]",
       "Restaurant": "[b]Ristorante\nBYOB - Bevande a vostro carico[/b]",
       "Mario_restaurant": "[i]L'ambiente sembra piacevole. Ma non amo sedermi a tavola da solo.[/i]",
@@ -594,7 +594,7 @@
       "Gioia_partynight_009": "È tardi. Farei meglio ad andare. Si torna alla vita di tutti i giorni, domani. E dovresti andare anche tu. Non hai niente da fare domani mattina?",
       "Mario_partynight_012": "Hai ragione. Alla prossima, allora. Ci becchiamo in giro... 'Notte!",
       "Town_hall_postparty": "Municipio\nPesca di beneficienza ogni domenica - Informazioni all'interno[/b]",
-      "Mario_first_date001": "[i]Bene, vediamo chi c'è in giro oggi. Andiamo a fare due passi.[/i]",
+      "Mario_first_date001": "[i]Bene, vediamo chi c'è in giro oggi... Andiamo a fare due passi.[/i]",
       "Mario_first_date002": "[i]Chissà se la becco nei dintorni. Magari neanche gira da queste parti abitualmente...[/i]",
       "Mario_first_date003": "[i]Magari è passata solo ieri per la festa.[/i]",
       "Mario_first_date004": "[i]Voglio davvero vedere se riesco a trovarla...[/i]",
@@ -738,9 +738,9 @@
       "Mario_night015": "♪ \"Io vedo il cielo sopra noi, che restiamo qui, abbandonati...\" ♪",
       "Gioia_night010": "Nessuno aveva mai fatto nulla di simile per me...",
       "Gioia_night011": "Vorrei che questa notte non finisse mai.",
-      "Mario_night016": "Perché dobbiamo tornare alle nostre attività domani? Non possiamo semplicemente restare qui per sempre?",
+      "Mario_night016": "Perché dobbiamo tornare alle nostre attività, domani? Non possiamo semplicemente restare qui per sempre?",
       "Gioia_night012": "Lo vorrei tanto.",
-      "Mario_whatweare001": "[i]E buongiornissimo a me. Cacchio, ho sprecato quasi tutto il giorno. Non che sia riuscito a dormire molto, ultimamente.[/i]",
+      "Mario_whatweare001": "[i]E buongiornissimo a me. Cacchio, ho sprecato quasi tutto il giorno.",
       "Mario_whatweare002": "[i]OK, se anche prima non ero molto sicuro se restare o meno, ora direi proprio che ho la mia risposta.[/i]",
       "Mario_whatweare003": "[i]Stanotte mi sono sentito più vivo di quanto mi ci sia mai sentito nell'ultimo anno.[/i]",
       "Mario_whatweare004": "[i]E sono sicuro che sia lo stesso anche per lei.[/i]",
@@ -937,7 +937,7 @@
       "Mario_moving013": "Lo sono! Non crederai ai tuoi occhi! Seguimi!",
       "Mario_gioia_moving_bar": "Non ho organizzato tutto per venirmene al bar!",
       "Mario_gioia_moving_restaurant": "Non c'è tempo per questo! Possiamo festeggiare più tardi!",
-      "Mario_gioia_moving_dogpound": "Davvero? Non è ch esto diventando ossessionato dai cani?",
+      "Mario_gioia_moving_dogpound": "Davvero? Non è che sto diventando ossessionato dai cani?",
       "Mario_gioia_moving_townhall": "Tic toc, tic toc, il tempo scorre!",
       "Mario_gioia_moving_mariohouse": "C'è una casa molto più bella di questa che mi attende! O ci attende!",
       "Mario_gioia_moving_gioiahouse": "Certo. È appena tornata a casa, sicuramente non vede l'ora di tornarci.",
@@ -979,7 +979,7 @@
       "Gioia_dog005": "Mi spiace, tesoro, avevo quasi dimenticato, devo assolutamente sbrigare una cosa che non posso posporre, puoi occuparti tu del resto degli inviti?",
       "Mario_dog004": "Dai, ti prego, non oggi! Avevi detto che non avevi nulla da fare! E ora cosa c'è? Dove devi andare?",
       "Gioia_dog006": "L'accordo era chiaro, teniamo separate le questioni personali dalla nostra vita qui. Hai promesso.",
-      "Mario_dog005": "OK, OK. Va bene. Tanto c'è sempre qualche cosa che devi fare.",
+      "Mario_dog005": "Va bene. Tanto c'è sempre qualche cosa che devi fare.",
       "Gioia_dog007": "Andiamo, tesoro, lo sai che lo faccio per noi. Non voglio portare qui i miei malesseri e le mie preoccupazioni riguardanti il lavoro o, come in questo caso, la famiglia. Questo è il nostro posto felice, non c'è bisogno di discutere di cose che possiamo lasciare al di fuori...",
       "Gioia_dog008": "È pur sempre il mio compleanno, devo trovare il tempo di festeggiare con i miei parenti.",
       "Mario_dog006": "Come possono essere una preoccupazione i tuoi parenti? Non li nomini neppure! Non me li hai mai presentati! Almeno lo sanno che esisto? Gli hai mai detto di quello che facciamo? Non possono venire anche loro a festeggiare qui?",
@@ -994,7 +994,7 @@
       "Mario_dog_mariohouse": "[i]Non scapperò da questa situazione tornando qui! E probabilmente ora questo posto è di qualcun altro.[/i]",
       "Mario_dog_gioiahouse": "[i]Spero che non voglia tornare qui...[/i]",
       "Mario_dog_park": "[i]Certo. Dovrei raccogliere qualche fiorellino? Che idiozia...[/i]",
-      "Mario_dog_townhall": "[i]Potrei appendere uno striscione dal tetto. \"Perdonami\". Patetico. E poi mi farei arrestare. Bisogna avere dei privilegi per poter salire lassù.[/i]",
+      "Mario_dog_townhall": "[i]Potrei appendere uno striscione dal tetto. \"Perdonami\". Patetico. E poi mi metterei nei guai. Bisogna avere dei privilegi per poter salire lassù.[/i]",
       "Mario_dog_restaurant": "[i]Questo mi ricorda che non ho mangiato nulla per pranzo.[/i]",
       "Mario_dog_bar": "[i]E poi cosa? Comprarle un \"all you can drink\" che non sfrutterà mai?[/i]",
       "Mario_dog_dogpound": "[i]Direi che oggi è il giorno giusto. Qualcuno sta per trovare una nuova casa! Andiamo.[/i]",
